[workspace]
resolver = "3"
members = [
    "rust/networking",
    "rust/exo_pyo3_bindings",
]

[workspace.package]
version = "0.0.1"
edition = "2024"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3

# Common shared dependendencies configured once at the workspace
# level, to be re-used more easily across workspace member crates.
#
# Common configurations include versions, paths, features, etc.
[workspace.dependencies]
## Crate members as common dependencies
networking = { path = "rust/networking" }

# Async dependencies
tokio = "1.46"

# Tracing/logging
log = "0.4"

# networking
libp2p = "0.56"

[workspace.lints.rust]
static_mut_refs = "warn"

# Clippy's lint category level configurations;
# every member crate needs to inherit these by adding
#
#     ```toml
#     [lints]
#     workspace = true
#     ```
#
# to their `Cargo.toml` files
[workspace.lints.clippy]
# Clippy lint categories meant to be enabled all at once
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
