[project]
name = "pytorch-system-cuda"
version = "0.1.0"
description = "Minimal PyTorch/vLLM environment that relies on system CUDA libraries."
requires-python = ">=3.10,<3.15"
dependencies = [
  "vllm",
  "torch==2.11.0",
  "torchvision==0.26.0",
  "torchaudio==2.11.0",
]

[tool.uv]
required-version = ">=0.8.6"
package = false
environments = ["sys_platform == 'linux'"]

# Hack: omit CUDA toolkit wheels for libraries already present under
# /usr/local/cuda, while keeping PyTorch wheel deps for libraries this host
# does not provide system-wide: cuDNN, cuSPARSELt, NCCL, and NVSHMEM.
exclude-dependencies = [
  "nvidia-cublas-cu12",
  "nvidia-cublas-cu13",
  "cuda-toolkit",
  "flashinfer-cubin",
  "humming-kernels",
  "nvidia-cublas",
  "nvidia-cuda-cccl",
  "nvidia-cuda-crt",
  "nvidia-cuda-cupti",
  "nvidia-cuda-cupti-cu12",
  "nvidia-cuda-cupti-cu13",
  "nvidia-cuda-nvcc",
  "nvidia-cuda-nvcc-cu12",
  "nvidia-cuda-nvcc-cu13",
  "nvidia-cuda-nvrtc",
  "nvidia-cuda-nvrtc-cu12",
  "nvidia-cuda-nvrtc-cu13",
  "nvidia-cuda-runtime",
  "nvidia-cuda-runtime-cu12",
  "nvidia-cuda-runtime-cu13",
  "nvidia-cuda-tileiras",
  "nvidia-cudnn",
  "nvidia-cudnn-cu12",
  "nvidia-cutlass-dsl",
  "nvidia-cutlass-dsl-libs-base",
  "nvidia-cutlass-dsl-libs-cu13",
  "nvidia-cufft",
  "nvidia-cufft-cu12",
  "nvidia-cufft-cu13",
  "nvidia-cufile",
  "nvidia-cufile-cu12",
  "nvidia-cufile-cu13",
  "nvidia-curand",
  "nvidia-curand-cu12",
  "nvidia-curand-cu13",
  "nvidia-cusolver",
  "nvidia-cusolver-cu12",
  "nvidia-cusolver-cu13",
  "nvidia-cusparse",
  "nvidia-cusparse-cu12",
  "nvidia-cusparse-cu13",
  "nvidia-cusparselt",
  "nvidia-cusparselt-cu12",
  "nvidia-nccl",
  "nvidia-nccl-cu12",
  "nvidia-nvjitlink",
  "nvidia-nvjitlink-cu12",
  "nvidia-nvjitlink-cu13",
  "nvidia-nvshmem",
  "nvidia-nvshmem-cu12",
  "nvidia-nvtx",
  "nvidia-nvtx-cu12",
  "nvidia-nvtx-cu13",
  "nvidia-nvvm",
  "quack-kernels",
  "tilelang",
  "tokenspeed-mla",
  "tokenspeed-triton",
  "triton",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
