[project]
name = "exo-scripts"
version = "0.1.0"
description = "Scripts for the Exo project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface_hub>=0.33.4",
    "exo"
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
exo = { workspace = true }