[project]
name = "exo-shared"
version = "0.1.0"
description = "Shared utilities for the Exo project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.18.0",
    "aiosqlite>=0.20.0",
    "networkx>=3.5",
    "openai>=1.93.0",
    "pathlib>=1.0.1",
    "protobuf>=6.31.1",
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "rustworkx>=0.16.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
clean = true

[tool.hatch.build.targets.wheel]
packages = []
include = ["*"]
exclude = ["protobufs/schemas", "*.md", "pyproject.toml"]

[tool.hatch.build.targets.sdist]
packages = []
include = ["*"]
exclude = ["protobufs/schemas", "*.md", "pyproject.toml"]

[dependency-groups]
dev = [
    "types-protobuf>=6.30.2.20250516",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
asyncio_mode = "auto"
