[project]
name = "exo-worker"
version = "0.1.0"
description = "Worker for the Exo project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exo-shared",
    "huggingface_hub>=0.33.4",
    "mlx==0.26.3",
    "mlx-lm>=0.25.3",
    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
clean = true

[tool.hatch.build.targets.wheel]
packages = []
include = ["*"]
exclude = ["*.md", "pyproject.toml"]

[tool.hatch.build.targets.sdist]
packages = []
include = ["*"]
exclude = ["*.md", "pyproject.toml"]
