[project]
name = "worker"
version = "0.1.0"
description = "Worker for the Exo project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "huggingface_hub>=0.33.4",
    "mlx>=0.26.3",
    "mlx-lm @ https://github.com/ml-explore/mlx-lm.git",
    "psutil>=7.0.0",
    "transformers>=4.55.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
