[project]
name = "exo-engine-mlx"
version = "0.1.0"
description = "MLX inference backend for the Exo project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
clean = true

[tool.hatch.build.targets.wheel]
packages = []
include = ["*"]
exclude = ["*.md", "pyproject.toml"]

[tool.hatch.build.targets.sdist]
packages = []
include = ["*"]
exclude = ["*.md", "pyproject.toml"]