[project]
name = "exo-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Evan", email = "evanev7@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "mlx-lm",         # TODO: depend on transformers or other
  "openai-harmony", # inherit from workspace
  "pydantic",       # inherit from workspace
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "strict"
failOnWarnings = true

reportAny = "error"
reportUnknownVariableType = "error"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportInvalidCast = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryTypeIgnoreComment = "error"

pythonVersion = "3.13"
