[package]
name = "babblerd"
version.workspace = true
edition.workspace = true

[dependencies]
color-eyre = "0.6.5"
futures-lite.workspace = true
ipnet = "2.12.0"
libc = "0.2.183"
n0-watcher = "0.6.1"
netwatch = "0.14.0"
rand = "0.10.0"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints]
workspace = true
